[gd_scene load_steps=10 format=2]

[ext_resource path="res://Themes/alterebro-pixel-font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/General Use/Menu.gd" type="Script" id=2]
[ext_resource path="res://Themes/selected_button.tres" type="StyleBox" id=3]
[ext_resource path="res://Themes/non_selected_button.tres" type="StyleBox" id=4]
[ext_resource path="res://Themes/button_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://Themes/pressed_button.tres" type="StyleBox" id=6]
[ext_resource path="res://Themes/hovered_button.tres" type="StyleBox" id=7]
[ext_resource path="res://Soundtrack/galinha1v2.ogg" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 150
outline_size = 7
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 15
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0901961, 0.670588, 0.92549, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 200
custom_constants/margin_top = 100
custom_constants/margin_left = 200
custom_constants/margin_bottom = 200

[node name="ContainerOne" type="VBoxContainer" parent="MarginContainer"]
margin_left = 200.0
margin_top = 100.0
margin_right = 1080.0
margin_bottom = 520.0

[node name="Label" type="Label" parent="MarginContainer/ContainerOne"]
margin_top = 14.0
margin_right = 880.0
margin_bottom = 137.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "FREEWAY"
align = 1
valign = 1

[node name="ContainerTwo" type="VBoxContainer" parent="MarginContainer/ContainerOne"]
margin_top = 155.0
margin_right = 880.0
margin_bottom = 420.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ContainerOne/ContainerTwo"]
margin_right = 880.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="SingleplayerButton" type="Button" parent="MarginContainer/ContainerOne/ContainerTwo/MarginContainer"]
margin_left = 100.0
margin_right = 780.0
margin_bottom = 75.0
focus_neighbour_top = NodePath("../../MarginContainer3/Leaderboard")
focus_neighbour_bottom = NodePath("../../MarginContainer2/MultiplayerButton")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
text = "Singleplayer"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/ContainerOne/ContainerTwo"]
margin_top = 95.0
margin_right = 880.0
margin_bottom = 170.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="MultiplayerButton" type="Button" parent="MarginContainer/ContainerOne/ContainerTwo/MarginContainer2"]
margin_left = 100.0
margin_right = 780.0
margin_bottom = 75.0
focus_neighbour_top = NodePath("../../MarginContainer/SingleplayerButton")
focus_neighbour_bottom = NodePath("../../MarginContainer3/Leaderboard")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
text = "Local Multiplayer"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/ContainerOne/ContainerTwo"]
margin_top = 190.0
margin_right = 880.0
margin_bottom = 265.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="Leaderboard" type="Button" parent="MarginContainer/ContainerOne/ContainerTwo/MarginContainer3"]
margin_left = 100.0
margin_right = 780.0
margin_bottom = 75.0
focus_neighbour_top = NodePath("../../MarginContainer2/MultiplayerButton")
focus_neighbour_bottom = NodePath("../../MarginContainer/SingleplayerButton")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
text = "Leaderboard"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true
stream_paused = true

[connection signal="pressed" from="MarginContainer/ContainerOne/ContainerTwo/MarginContainer/SingleplayerButton" to="." method="_on_SingleplayerButton_pressed"]
[connection signal="pressed" from="MarginContainer/ContainerOne/ContainerTwo/MarginContainer2/MultiplayerButton" to="." method="_on_MultiplayerButton_pressed"]
[connection signal="pressed" from="MarginContainer/ContainerOne/ContainerTwo/MarginContainer3/Leaderboard" to="." method="_on_Leaderboard_pressed"]
